优化页面切换时需要重新开启声音权限的体验

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <div class="brand">LocalLife</div>
         <div class="slogan">本地优先 · 隐私友好 · 精致生活控制台</div>
       </div>
-      <div class="badge">Stage A · 骨架可运行</div>
+      <div class="badge">可运行</div>
     </header>
 
     <nav class="glass tabs">
