修复在日历界面收不到任务提醒的问题（目前只可以在日历面和tasks面收到提醒，如果别的面也需要可以后续更改（前端添加末尾代码））

--- a/templates/planner/calendar_month.html
+++ b/templates/planner/calendar_month.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Calendar · LocalLife{% endblock %}
+{% load static tz%}
 
 {% block content %}
   <section class="glass card">
@@ -74,4 +75,10 @@
       </div>
     {% endif %}
   </section>
+  <div id="toast-root"></div>
+
+  <script>
+    window.REMINDER_ENDPOINT = "{% url 'tasks:reminders_api' %}";
+  </script>
+  <script src="{% static 'js/reminders.js' %}"></script>
 {% endblock %}
