--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
       {% endif %}
 
       {% if user.is_authenticated %}
+        <span class="tab subtle">你好，{{ user.username }}</span>
         <form method="post" action="{% url 'logout' %}" style="display:inline;">
           {% csrf_token %}
           <button type="submit" class="tab subtle" style="background:transparent;border:0;cursor:pointer;">
