--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         {% url 'tasks:index' as tasks_url %}
         {% url 'habits:index' as habits_url %}
         {% url 'planner:index' as cal_url %}
-        {% url 'notes:index' as notes_url %}
+        {% url 'news:home' as news_url %}
         {% url 'analytics_app:index' as ana_url %}
         {% url 'profiles:settings' as set_url %}
         <div class="tabs-left">
@@ -31,7 +31,7 @@
           <a class="tab {% if request.path|slice:":7" == "/tasks/" %}active{% endif %}" href="{{ tasks_url }}">Tasks</a>
           <a class="tab {% if request.path|slice:":8" == "/habits/" %}active{% endif %}" href="{{ habits_url }}">Habits</a>
           <a class="tab {% if request.path|slice:":10" == "/calendar/" %}active{% endif %}" href="{{ cal_url }}">Calendar</a>
-          <a class="tab {% if request.path|slice:":7" == "/notes/" %}active{% endif %}" href="{{ notes_url }}">Notes</a>
+          <a class="tab {% if request.path|slice:":7" == "/news/" %}active{% endif %}" href="{{ news_url }}">News</a>
           <a class="tab {% if request.path|slice:":11" == "/analytics/" %}active{% endif %}" href="{{ ana_url }}">Analytics</a>
           <a class="tab {% if request.path|slice:":10" == "/settings/" %}active{% endif %}" href="{{ set_url }}">Settings</a>
         </div>
