解决新闻无法显示的问题（网址来源问题）

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         {% url 'tasks:index' as tasks_url %}
         {% url 'habits:index' as habits_url %}
         {% url 'planner:index' as cal_url %}
-        {% url 'news:home' as news_url %}
+        {% url 'news:index' as news_url %}
         {% url 'analytics_app:index' as ana_url %}
         {% url 'profiles:settings' as set_url %}
         <div class="tabs-left">
